# ud-mlops-demo

./: .pre-commit-config.yaml  Makefile
demo_app/: pyproject.toml
